Plugin Directory: Fixed IE subnav issue.
The subnav across the new wporg design is broken in IE. I fixed this by removing a CSS attribute and replacing it with IE friendly ones for the selector .main-navigation.

See #2366




git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4775 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/site-header/main-navigation/style.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/components/site-header/main-navigation/style.scss
@@ -108,8 +108,9 @@
 	}
 	.main-navigation {
 		float: right;
-		position: initial;
-		width: initial;
+		position: relative;
+		width: auto;
+		top: auto;
 
 		&.toggled {
 			padding: 1px 0;
